Revision history for Music-ModalFunction

{{$NEXT}}
    - Improve code a bit.

0.0201 2023-06-03 08:29:45
    - Modularize code.
    - Fix doc examples.

0.0200 2023-06-03 07:28:46
    - Change the chord_key() argument order to match pivot_chord_keys().

0.0103 2023-06-03 06:52:01
    - Improve documentation.

0.0102 2023-06-03 06:35:12
    - Improve documentation.
    - Add test for pivot_chord_keys().

0.0101 2023-06-03 06:13:16
    - Remove debugging code.

0.0100 2023-06-03 06:06:58
    - Mint with Dist::Zilla.
    - Port code from a related script in my Music repo.