@@ -13,14 +13,16 @@ subtest defaults => sub {
     is $obj->mode_note, undef, 'mode_note';
     is $obj->mode, undef, 'mode';
     is $obj->mode_function, undef, 'mode_function';
+    is $obj->mode_roman, undef, 'mode_roman';
     is $obj->key_note, undef, 'key_note';
     is $obj->key, undef, 'key';
     is $obj->key_function, undef, 'key_function';
+    is $obj->key_roman, undef, 'key_roman';
     is $obj->verbose, 0, 'verbose';
     is_deeply [sort keys %{ $obj->_modes }],
         [qw(aeolian dorian ionian locrian lydian mixolydian phrygian)],
         '_modes';
-    ok length $obj->_database, '_database';
+    ok length($obj->_database), '_database';
 };
 
 subtest chord_key => sub {
@@ -31,8 +33,8 @@ subtest chord_key => sub {
     ];
     my $got = $obj->chord_key;
     my $expect = [
-        [ 'chord_key', 'd', 'maj', 'g', 'ionian', 'dominant' ],
-        [ 'chord_key', 'd', 'maj', 'g', 'lydian', 'dominant' ],
+        [ 'chord_key', 'd', 'maj', 'g', 'ionian', 'dominant', 'r_V' ],
+        [ 'chord_key', 'd', 'maj', 'g', 'lydian', 'dominant', 'r_V' ],
     ];
     is_deeply $got, $expect, 'chord_key';
 };
@@ -46,12 +48,12 @@ subtest pivot_chord_keys => sub {
     ];
     my $got = $obj->pivot_chord_keys;
     my $expect = [
-        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'ionian', 'dominant', 'd', 'dorian', 'subdominant' ],
-        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'ionian', 'dominant', 'd', 'ionian', 'subdominant' ],
-        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'ionian', 'dominant', 'd', 'mixolydian', 'subdominant' ],
-        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'lydian', 'dominant', 'd', 'dorian', 'subdominant' ],
-        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'lydian', 'dominant', 'd', 'ionian', 'subdominant' ],
-        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'lydian', 'dominant', 'd', 'mixolydian', 'subdominant' ],
+        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'ionian', 'dominant', 'r_V', 'd', 'dorian', 'subdominant', 'r_IV' ],
+        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'ionian', 'dominant', 'r_V', 'd', 'ionian', 'subdominant', 'r_IV' ],
+        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'ionian', 'dominant', 'r_V', 'd', 'mixolydian', 'subdominant', 'r_IV' ],
+        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'lydian', 'dominant', 'r_V', 'd', 'dorian', 'subdominant', 'r_IV' ],
+        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'lydian', 'dominant', 'r_V', 'd', 'ionian', 'subdominant', 'r_IV' ],
+        [ 'pivot_chord_keys', 'g', 'maj', 'c', 'lydian', 'dominant', 'r_V', 'd', 'mixolydian', 'subdominant', 'r_IV' ],
     ];
     is_deeply $got, $expect, 'pivot_chord_keys';
 
