@@ -2,6 +2,7 @@ Revision history for Music-ModalFunction
 
 {{$NEXT}}
     - Improve code a bit.
+    - Select Roman numberal designations
 
 0.0201 2023-06-03 08:29:45
     - Modularize code.
